--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <!-- <script src="/js/practicas_Sesion3.js"></script> -->
   <!-- <script src="js/test_practicas.js"></script> -->
   <!-- <script src="js/stringMethods.js"></script> -->
-  <script src="js/arrow_functions.js"></script>
+  <!-- <script src="js/arrow_functions.js"></script> -->
+  <!-- <script src="js/homework_s8"></script> -->
+  <script src="js/arrays.js"></script>
 </body>
 </html>
