--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <!-- <script src="js/stringMethods.js"></script> -->
   <!-- <script src="js/arrow_functions.js"></script> -->
   <!-- <script src="js/homework_s8"></script> -->
-  <script src="js/arrays.js"></script>
+  <!-- <script src="js/arrays.js"></script> -->
+  <!-- <script src="js/objetos.js"></script> -->
+  <script src="js/homework_objetos.js"></script>
 </body>
 </html>
