--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- <script src="js/arrow_functions.js"></script> -->
   <!-- <script src="js/homework_s8"></script> -->
   <!-- <script src="js/arrays.js"></script> -->
-  <!-- <script src="js/objetos.js"></script> -->
-  <script src="js/homework_objetos.js"></script>
+  <script src="js/objetos.js"></script>
+  <!-- <script src="js/homework_objetos.js"></script> -->
 </body>
 </html>
