--- a/index.html
+++ b/index.html
@@ -7,23 +7,19 @@
   <title>JS</title>
 </head>
 <body>
-  <style>
-    body{
-      background-color: rgb(75, 74, 74);
-    }
-  </style>
-<!-- <script src="js/functions.js"></script> -->
-<!-- <script src="/js/base.js"></script> -->
- <!--  <script src="/js/celtofa.js"></script> -->
-  <!-- <script src="/js/conditionals.js"></script> -->
-  <!-- <script src="/js/isLarger.js"></script> -->
-  <!-- <script src="/js/practicas_Sesion3.js"></script> -->
-  <!-- <script src="js/test_practicas.js"></script> -->
-  <!-- <script src="js/stringMethods.js"></script> -->
-  <!-- <script src="js/arrow_functions.js"></script> -->
-  <!-- <script src="js/homework_s8"></script> -->
-  <!-- <script src="js/arrays.js"></script> -->
-  <script src="js/objetos.js"></script>
-  <!-- <script src="js/homework_objetos.js"></script> -->
+
+  
+  <h1 id="titulo" class="claseTest">
+    JavaScript DOM
+  </h1>  
+
+  <div class="parent">
+      <div class="reference">
+
+      </div>
+  </div>
+
+  
+  <script src="/js/DOM.js"></script>
 </body>
 </html>
