--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
     <link rel="stylesheet" href="style.css" />
     <title>JS</title>
   </head>
-  <body>
-    <h1>Albums Grid</h1>
-
+  <body style="background-color: rgb(95, 94, 94)">
+    <h1>Js</h1>
     <div class="container">
       <div id="albums" class="row row-cols-1 row-cols-md-2 g-4">
         <!-- Codigo a insertar -->
+        <button>Click</button>
+
+        <input type="text" placeholder="lo que sea" class="btn1" />
+
+        <select name="a" id="a">
+          <option value="1">option1</option>
+          <option value="2">option2</option>
+        </select>
       </div>
     </div>
 
-    <script src="/js/DOM.js"></script>
+    <script src="/js/events.js"></script>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
