--- a/index.html
+++ b/index.html
@@ -14,21 +14,66 @@
     <link rel="stylesheet" href="style.css" />
     <title>JS</title>
   </head>
-  <body style="background-color: rgb(95, 94, 94)">
-    <h1>Js</h1>
+
+  <body body style="background-color: rgb(206, 218, 217)">
+    <h1 class="my-5 text-center">JavaScript</h1>
+
+    <ul class="lista"></ul>
+    <!-- !Practica insertar eventos -->
+    <!-- 
     <div class="container">
-      <div id="albums" class="row row-cols-1 row-cols-md-2 g-4">
-        <!-- Codigo a insertar -->
-        <button>Click</button>
+      <div class="row d-flex">
+        <div class="my-4">
+          <button class="btn_show btn btn-primary fs-4">Show Card</button>
+          <div class="row card_holder flex justify-content-center"></div>
+        </div>
 
-        <input type="text" placeholder="lo que sea" class="btn1" />
+        <div class="my-4 d-flex flex-column input-div">
+          <div class="input-group">
+            <button class="btn_clear btn btn-primary fs-4">
+              Limpiar Campo
+            </button>
+            <input
+              type="text"
+              class="form-control input_text"
+              placeholder="Inserte algun texto"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+            />
+          </div>
+          <div class="text_div"></div>
+        </div>
 
-        <select name="a" id="a">
-          <option value="1">option1</option>
-          <option value="2">option2</option>
-        </select>
+        <div class="my-4">
+          <span class="w-25 badge text-bg-primary fs-4 mouse_target"
+            >Mouse Event</span
+          >
+          <div class="img-div"></div>
+        </div>
       </div>
-    </div>
+    </div> -->
+
+    <!-- !Practica filtart usaurios -->
+    <!-- <div class="container">
+      <div class="row">
+        <input
+          type="text"
+          class="form-control input_text"
+          placeholder="Buscan coincidencia"
+          aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-default"
+        />
+        <button class="mt-4 search-button btn btn-primary find_user">
+          Buscar
+        </button>
+
+        <div>
+          <ul id="list_users" class="mt-3" list-group list-group-flush>
+            Insertar usuarios filtrados
+          </ul>
+        </div>
+      </div>
+    </div> -->
 
     <script src="/js/events.js"></script>
 
