--- a/index.html
+++ b/index.html
@@ -15,11 +15,31 @@
     <title>JS</title>
   </head>
 
-  <body body style="background-color: rgb(229, 242, 241)">
-    <h1 class="my-5 text-center">Js</h1>
+  <!-- <a href="post.html">post  </a> -->
+
+  <div class="container mt-5">
+      <div class="row">
+        <input
+          type="text"
+          class="form-control input_text"
+          placeholder="Buscan coincidencia"
+          aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-default"
+        />
+        <!-- <button class="mt-4 search-button btn btn-primary find_user">
+          Buscar
+        </button> -->
+
+        <div>
+          <ul id="list_users" class="mt-3" list-group list-group-flush>
+            <!-- Inseter -->
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <!-- <script src="/js/events.js"></script> -->
-    <!-- <script src="/js/test.js"></script> -->
+    <script src="/js/AJAX.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script
