--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <!-- <a href="post.html">post  </a> -->
 
   <div class="container mt-5">
+
+    <a href="post.html">POST</a>
+
       <div class="row">
         <input
           type="text"
