--- a/index.html
+++ b/index.html
@@ -15,12 +15,38 @@
     <title>JS</title>
   </head>
 
-  <!-- <a href="post.html">post  </a> -->
+  <nav class="navbar navbar-expand-lg bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand fs-3" href="/">Home</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link fs-5" href="post.html">Post</a>
+          <!-- <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link disabled">Disabled</a> -->
+        </div>
+      </div>
+    </div>
+  </nav>
 
-  <div class="container mt-5">
-
-    <a href="post.html">POST</a>
-
+  <body>
+    <style>
+      body {
+        background-color: rgb(158, 158, 158);
+      }
+    </style>
+    <h1 class="text-center my-5">Pagina Principal</h1>
+    <div class="container mt-5">
       <div class="row">
         <input
           type="text"
@@ -29,10 +55,6 @@
           aria-label="Sizing example input"
           aria-describedby="inputGroup-sizing-default"
         />
-        <!-- <button class="mt-4 search-button btn btn-primary find_user">
-          Buscar
-        </button> -->
-
         <div>
           <ul id="list_users" class="mt-3" list-group list-group-flush>
             <!-- Inseter -->
