--- a/post.html
+++ b/post.html
@@ -29,9 +29,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link fs-5" href="post.html">Post</a>
-          <!-- <a class="nav-link" href="#">Pricing</a>
-          <a class="nav-link disabled">Disabled</a> -->
+          <a class="nav-link fs-5" href="post.html">Posts</a>
+          <a class="nav-link fs-5" href="create_post.html">Create Post</a>
+          <!-- <a class="nav-link disabled">Disabled</a> -->
         </div>
       </div>
     </div>
