--- a/post.html
+++ b/post.html
@@ -46,8 +46,7 @@
     <div class="container">
       <div class="post_holder row row-cols-1 row-cols-md-2 g-4"></div>
     </div>
-    <script src="/js/practica_post.js"></script>
-    <!-- JavaScript Bundle with Popper -->
+    <script src="/js/render_posts.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
