--- a/post_detail.html
+++ b/post_detail.html
@@ -31,6 +31,8 @@
         <div class="navbar-nav">
           <a class="nav-link fs-5" href="post.html">Posts</a>
           <a class="nav-link fs-5" href="create_post.html">Create Post</a>
+
+          <!-- <a class="nav-link disabled">Disabled</a> -->
         </div>
       </div>
     </div>
@@ -42,49 +44,9 @@
   </style>
   <body class="">
     <div class="container">
-      <div class="row d-flex justify-content-center">
-        <form class="mt-5 w-50">
-          <h2 class="text-center">Crea tu post</h2>
-          <div class="alerts_holder"></div>
-          <div class="mb-3 mt-3">
-            <label for="exampleInputEmail1" class="form-label">Titulo</label>
-            <input
-              type="text"
-              class="form-control post_title_input"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              placeholder="Inserta el titulo"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label"
-              >Contenido</label
-            >
-            <textarea
-              class="form-control post_body_input"
-              name="exampleInputPassword1"
-              id="exampleInputPassword1"
-              cols="30"
-              rows="10"
-              placeholder="Inserta el cuerpo de tu post"
-            ></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Fecha</label>
-            <input
-              type="date"
-              class="form-control post_date_input"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-            />
-          </div>
-          <button type="button" class="btn btn-primary btn_create_post mt-2">
-            Crear Post
-          </button>
-        </form>
-      </div>
+      <div class="row d-flex justify-content-center card_holder"></div>
     </div>
-    <script src="/js/create_post.js"></script>
+    <script src="/js/post_details.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
