--- a/create_post.html
+++ b/create_post.html
@@ -11,6 +11,10 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <nav class="navbar navbar-expand-lg bg-primary">
@@ -84,6 +88,23 @@
         </form>
       </div>
     </div>
+
+    <!-- Create the editor container -->
+    <div id="editor">
+      <p>Hello World!</p>
+      <p>Some initial <strong>bold</strong> text</p>
+      <p><br /></p>
+    </div>
+
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
+    <!-- Initialize Quill editor -->
+    <script>
+      var quill = new Quill("#editor", {
+        theme: "snow",
+      });
+    </script>
     <script src="/js/create_post.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
